Remove repeated timeout/retry defaults and factor out common ops (#82)
* Remove explicit defaults and factor out common ops

* Undo typesafe use of empty list - not sure why its causing an issue